br-alignment-issue-mozilla

--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -591,7 +591,7 @@
         }
         .text{
            padding-left: 30px;
-           display: -ms-inline-grid;
+           display: inline-grid;
         }
       }
       input:checked ~ label{
